<resources>
    <string name="app_name" translatable="false">Shea</string>
    <string name="title_activity_create_account" translatable="false">CreateAccountActivity</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="library_tab_title">Bibliothèque</string>
    <string name="favoris_tab_title">Favoris</string>
    <string name="home_tab_title">Accueil</string>
    <string name="search_tab_title">Recherche</string>
    <string name="settings_tab_title">Paramètres</string>
    <string name="changePasswordText">Changer de mot de passe</string>
    <string name="statText">Statistiques</string>
    <string name="exportDataText">Exporter les données</string>
    <string name="disconnectText">Se déconnecter</string>
    <string name="aide_description">Aide</string>
    <string name="about">À propos</string>
    <string name="help">Aide</string>
    <string name="Version">Version</string>
    <string name="version_number">Version 1.0</string>
    <string name="author">Auteur</string>
    <string name="author_1_name" translatable="false">Alex Ding</string>
    <string name="author_2_name" translatable="false">Killian Denéchère</string>
    <string name="author_3_name" translatable="false">Farès Zaroui</string>
    <string name="helpText">Oups ! Il semble que notre page d’aide ait pris des vacances. Revenez plus tard pour des conseils utiles !</string>
    <string name="previous_page_button">‹ page précédente</string>
    <string name="select_folders_to_remove">Choisis les dossiers à supprimer.</string>
    <string name="display_error">Une erreur empêche l\'affichage</string>
    <string name="abort">Annuler</string>
    <string name="create">Créer</string>
    <string name="create_folder">Créer un nouveau dossier ?</string>
    <string name="no_folder">Utilisez le bouton (+) pour créer votre premier dossier</string>
    <string name="delete_folder">Supression de dossiers</string>
    <string name="delete_folder_confirmation">Voulez-vous vraiment supprimer ces dossiers ?</string>
    <string name="delete">Supprimer</string>
    <string name="add">Ajouter</string>
    <string name="add_to_folder">Ajouter à un dossier</string>
    <string name="save">Sauvegarder</string>
    <string name="no_bookmarks_folder">Rendez-vous à l\'accueil pour créer votre premier dossier</string>
    <string name="comment_error">Erreur lors de l\'enregistrement du commentaire</string>
    <string name="comment_published">Votre commentaire a bien été publié</string>
    <string name="favorite_removed">Le webtoon a bien été retiré des favoris</string>
    <string name="favorite_error">Une erreur empêche la modification des favoris</string>
    <string name="favorite_added">Le webtoon a bien été ajouté aux favoris</string>
    <string name="bookmark_updated">Modifications sauvegardées</string>
    <string name="bookmark_error">Une erreur empêche la modification des dossiers</string>
    <string name="no_title">Vous devez mettre un titre</string>
    <string name="baseTitle">Accueil</string>
    <string name="shared">Publique</string>
    <string name="unshared">Privée</string>
    <string name="title">Titre</string>
    <string name="description">Description</string>
    <string name="success_follow">Vous suivez maintenaint cette liste</string>
</resources>